<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:text="@string/firstName"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="16dp"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck" />

            <TextView
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/purple_200"
                android:text="@string/lastName"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="16dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/dateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/purple_200"
                android:text="@string/dateOfBirth"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editDoB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789-"
                android:ems="10"
                android:hint="@string/dobHint"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:padding="16dp" />

            <TextView
                android:id="@+id/genderEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/purple_200"
                android:text="@string/Gender"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="421dp"
                android:layout_height="233dp"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/nonBinary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nonbinary" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notToSay" />

            </RadioGroup>

            <TextView
                android:id="@+id/pronounEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/purple_200"
                android:text="@string/Pronouns"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz/,"
                android:ems="10"
                android:hint="@string/Pronouns"
                android:inputType="textPersonName"
                android:padding="16dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="271dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:background="@color/teal_200"
                android:text="@string/saveProfileEdits"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@color/teal_200" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>